--- a/index.html
+++ b/index.html
@@ -4,22 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Arcitect website</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Deshbord</a></li>
-                <li><a href="">Services</a></li>
-            </ul>
-        </nav>
+        <div class="menu-bar">
+            <div class="title">
+               <h1>G3 Architects</h1> 
+            </div>
+            <div class="menu">
+                <nav>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Deshbord</a></li>
+                        <li><a href="">Services</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="header-text">
+            <h1>Brand new Architect of Group</h1>
+            <p>we are start a new brand new architect group , let's work togather. we are proviidng  a strog foundetion and as you want we will work </p>
+            <button class="btn-primary">Explore More</button>
+        </div>
     </header>
+
+    <!-- main start here -->
     <main>
 
     </main>
+    <!-- footer start here -->
     <footer>
 
     </footer>
