--- a/index.html
+++ b/index.html
@@ -24,16 +24,33 @@
                 </nav>
             </div>
         </div>
-        <div class="header-text">
-            <h1>Brand new Architect of Group</h1>
-            <p>we are start a new brand new architect group , let's work togather. we are proviidng  a strog foundetion and as you want we will work </p>
-            <button class="btn-primary">Explore More</button>
+     
+            <div class="header-text">
+                <h1>Brand new Architect of Group</h1>
+                <p>we are start a new brand new architect group , let's work togather. we are proviidng  a strog foundetion and as you want we will work </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <div class="img">
+                <img src="./images/banner.png" alt="">
+           </div>
         </div>
     </header>
 
     <!-- main start here -->
     <main>
-
+        <section class="work-explain">
+            <div class="img-explain">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
+            </div>
+            <div class="explain-text">
+                <h1><span id="light">Quick List</span> of our <span id="tomato">feature</span></h1>
+                <p>there are explain how we work for our clint here is explain</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <!-- footer start here -->
     <footer>
