new more code added

--- a/index.html
+++ b/index.html
@@ -51,6 +51,35 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- our feature explain start here -->
+        <section class="feature-section">
+                       
+            <div class="feature-text">
+                <h1>Feature you will love</h1>
+                <p>here we describe what feature we provide you and we    deffinetly sure that you will love this</p>
+                <div class="feature-topic">
+                    <h2>here-title-1</h2>
+                    <p>what we do explain some topic yopu can read everything now i added more word here should be added more for alignment</p>
+                </div>
+                <div class="feature-topic">
+                    <h2>here-title-1</h2>
+                    <p>what we do explain some topic yopu can read everything now i added more word here should be added more for alignment</p>
+                </div>
+                <div class="feature-topic">
+                    <h2>here-title-1</h2>
+                    <p>what we do explain some topic yopu can read everything now i added more word here should be added more for alignment</p>
+                </div>
+                <div class="feature-topic">
+                    <h2>here-title-1</h2>
+                    <p>what we do explain some topic yopu can read everything now i added more word here should be added more for alignment</p>
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="./images/architect.png" alt="">
+                <button class="feature-btn">10+Year <br>Experience</button>
+            </div>
+          
+        </section>
     </main>
     <!-- footer start here -->
     <footer>
