--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arcitect website</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -79,6 +80,32 @@
                 <button class="feature-btn">10+Year <br>Experience</button>
             </div>
           
+        </section>
+        <section class="fact-section">
+            <h1>Some Facts here</h1>
+            <p>facts are we are especialist at this field so can trustus</p>
+        </section>
+        <section class="review-section">
+            <div>
+                <img src="./images/icons/ribon.png" alt="">
+                <h1>60</h1>
+                <p>Award Winner</p>
+            </div>
+            <div>
+                <img src="./images/icons/projects.png" alt="">
+                <h1>1540</h1>
+                <p>Projects Finish</p>
+            </div>
+            <div>
+                <img src="./images/icons/email.png" alt="">
+                <h1>540</h1>
+                <p>Email Solve</p>
+            </div>
+            <div>
+                <img src="./images/icons/customers.png" alt="">
+                <h1>1500</h1>
+                <p>Award Winner</p>
+            </div>
         </section>
     </main>
     <!-- footer start here -->
