almost finish code

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
                 <h1>Feature you will love</h1>
                 <p>here we describe what feature we provide you and we    deffinetly sure that you will love this</p>
                 <div class="feature-topic">
-                    <h2>here-title-1</h2>
+                    <h2>Desktop & mobile version</h2>
                     <p>what we do explain some topic yopu can read everything now i added more word here should be added more for alignment</p>
                 </div>
                 <div class="feature-topic">
-                    <h2>here-title-1</h2>
+                    <h2>Drag & Drop Duild</h2>
                     <p>what we do explain some topic yopu can read everything now i added more word here should be added more for alignment</p>
                 </div>
                 <div class="feature-topic">
-                    <h2>here-title-1</h2>
+                    <h2>Awesome Modern Design</h2>
                     <p>what we do explain some topic yopu can read everything now i added more word here should be added more for alignment</p>
                 </div>
                 <div class="feature-topic">
-                    <h2>here-title-1</h2>
+                    <h2>Super Easy to Edit</h2>
                     <p>what we do explain some topic yopu can read everything now i added more word here should be added more for alignment</p>
                 </div>
             </div>
@@ -81,9 +81,10 @@
             </div>
           
         </section>
+        <!-- some facts here -->
         <section class="fact-section">
             <h1>Some Facts here</h1>
-            <p>facts are we are especialist at this field so can trustus</p>
+            <p>facts are we are especialist at  here i have to add more text so am a adding more text this field so can trustus</p>
         </section>
         <section class="review-section">
             <div>
@@ -107,10 +108,31 @@
                 <p>Award Winner</p>
             </div>
         </section>
+        <section class="our-sponsore">
+            <h1>Our Sponsors</h1>
+            <p>here are my sponser they are promoting us and they work with us so you cal also added with us</p>
+        </section>
+        <section class="sponsore-section">
+            <div>
+                <img src="./images/sponsors/amazon.png" alt="">
+            </div>
+            <div>
+                <img src="./images/sponsors/figma.png" alt="">
+            </div>
+            <div>
+                <img src="./images/sponsors/google.png" alt="">
+            </div>
+            <div>
+                <img src="./images/sponsors/spotify.png" alt="">
+            </div>
+            <div>
+                <img src="./images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
     </main>
     <!-- footer start here -->
-    <footer>
-
+    <footer class="footer">
+        <p>All rights reserved copyright &copy;2023 startup landing page design</p>
     </footer>
 </body>
 </html>
