--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </table>
            
             <div class="our-company-data">
-                <h1>Our Company Data</h1>
+                <h1>My Unique section</h1>
                 <p>we done before those work with those company so join with us and enjoy your project just see what are we doing</p>
             </div>
         </section>
